--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="Proyect_1.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Proyect #1: Web Scrapper</h2>
 									<p>Made a web scrapper that obtains data from a supermarket</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">More</a></li>
+										<li><a href="Proyect_1.html" class="button">More</a></li>
 									</ul>
 								</div>
 							</div>
