--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -34,8 +34,40 @@
 						<div class="inner">
 							<h1 class="major">Web scrapper</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>El Proyecto #1 es una herramienta de web-scraping diseñada para recolectar datos de productos del supermercado DIA. Esta aplicación automatizada crea una base de datos de productos que puede utilizarse para análisis de precios y estudios de variación de precios a lo largo del tiempo.</p>
+							<p>
+								<strong>Características Principales:</strong><br>
+								- Relevamiento exhaustivo: Captura todos los productos disponibles en el catálogo en línea del supermercado DIA.<br>
+								- Frecuencia adaptable: Al ser la primera versión, por ahora se corre únicamente de forma manual. En futuros updates se podrá correr de forma diaria. El código está adaptado para la página del DIA. En un futuro se podría replicar a otros sitios web.
+							</p>
+							<p>
+								<strong>Instalación:</strong><br>
+								La instalación es sencilla y solo requiere clonar este repositorio:<br>
+								<pre><code>git clone https://github.com/tu-usuario/tu-repositorio.git
+cd tu-repositorio</code></pre>
+							</p>
+							<p>
+								<strong>Librerías Utilizadas:</strong><br>
+								Este proyecto utiliza las siguientes librerías:<br>
+								- requests: Para hacer solicitudes HTTP a la página web del supermercado.<br>
+								- BeautifulSoup: Para parsear y extraer información de las páginas HTML.<br>
+								- pandas: Para manipular y almacenar los datos recolectados.<br>
+								- numpy: Para operaciones numéricas y de matriz.
+							</p>
+							<p>
+								<strong>Análisis de Datos:</strong><br>
+								Utiliza los datos recolectados para análisis de precios y estudios de variación de precios. Ejemplos de uso incluyen:<br>
+								- Análisis exploratorio de datos (EDA).<br>
+								- Estimación del índice de precios al consumidor (IPC).
+							</p>
+							<p>
+								<strong>Autor:</strong><br>
+								Este proyecto fue creado y mantenido por <a href="https://github.com/lautaropereirab" target="_blank">Lautaro Pereira Basile</a>. Si tienes alguna pregunta o sugerencia, no dudes en contactarme.
+							</p>
+							<p>
+								<strong>Contacto:</strong><br>
+								Puedes contactarme a través de mi perfil de <a href="https://www.linkedin.com/in/lautaropereirab/" target="_blank">LinkedIn</a> o por correo electrónico: <a href="mailto:lautaropereirabasile@gmail.com">lautaropereirabasile@gmail.com</a>.
+							</p>
 						</div>
 					</section>
 
