--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Proyect #2: Data Visualization</h2>
+									<p>Using sales dataset to perform key visualizations</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="Proyect_2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<section>
+						<!-- <section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -80,7 +80,7 @@
 								</div>
 							</div>
 						</section>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
