--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Proyect #2: Data Visualization</h2>
-									<p>Using sales dataset to perform key visualizations</p>
+									<p>Using shopping sales dataset to perform key visualizations</p>
 									<ul class="actions">
 										<li><a href="Proyect_2.html" class="button">Learn more</a></li>
 									</ul>
