--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="Proyect_1.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="Proyect_1.html" class="image"><img src="images/pic01.svg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Proyect #1: Web Scrapper</h2>
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic02.svg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Proyect #2: Data Visualization</h2>
@@ -190,7 +190,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy;Pincopan. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Pincopan. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
