--- a/index.html
+++ b/index.html
@@ -90,24 +90,25 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Data-Driven Insights</h3>
+									<p>Transforming raw data into actionable insights that drive decision-making and business growth.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Tailored Solutions</h3>
+									<p>Crafting customized analytical solutions to tackle unique challenges with precision and impact.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Visual Storytelling</h3>
+									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Continuous Innovation</h3>
+									<p>Embracing new tools and methodologies to stay ahead in fast-paced, data-driven industries.</p>
 								</section>
+							</div>							
 								<!-- <section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Urna quis bibendum</h3>
