--- a/index.html
+++ b/index.html
@@ -89,24 +89,24 @@
 							<p>Economist and Data Analyst with consulting and fintech experience. I thrive on solving complex problems and delivering impactful solutions through data analysis and clear, actionable visualizations in dynamic, results-oriented environments.</p>
 							<div class="features">
 								<section>
-									<img src="https://unsplash.com/photos/vEnKwfk1Clo/download" alt="Data-driven insights" style="width:100px;height:auto;">
+									<img src="images/data-driven-insights.jpg" alt="Data Insights" style="width:64px; height:64px;">
 									<h3>Data-Driven Insights</h3>
-									<p>Delivering impactful solutions with clear and actionable data visualizations that uncover trends and opportunities.</p>
+									<p>Transforming raw data into actionable insights that drive decision-making and business growth.</p>
 								</section>
 								<section>
-									<img src="https://unsplash.com/photos/85NT95eGqs4/download" alt="Analytics Solutions" style="width:100px;height:auto;">
-									<h3>Analytics Solutions</h3>
-									<p>Transforming raw data into comprehensive and meaningful insights to guide strategic decisions.</p>
+									<img src="images/tailored-solutions.jpg" alt="Tailored Solutions" style="width:64px; height:64px;">
+									<h3>Tailored Solutions</h3>
+									<p>Crafting customized analytical solutions to tackle unique challenges with precision and impact.</p>
 								</section>
 								<section>
-									<img src="https://unsplash.com/photos/gySMaocSdqs/download" alt="Problem Solving" style="width:100px;height:auto;">
-									<h3>Strategic Problem Solving</h3>
-									<p>Applying analytical thinking to tackle complex challenges and deliver measurable results.</p>
+									<img src="images/visual-storytelling.jpg" alt="Visual Storytelling" style="width:64px; height:64px;">
+									<h3>Visual Storytelling</h3>
+									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
 								</section>
 								<section>
-									<img src="https://unsplash.com/photos/R-LK3sqLiBw/download" alt="Continuous Learning" style="width:100px;height:auto;">
-									<h3>Continuous Learning</h3>
-									<p>Staying ahead of industry trends and adapting to new technologies to ensure innovative solutions.</p>
+									<img src="images/learning.jpg" alt="Continuous Innovation" style="width:64px; height:64px;">
+									<h3>Continuous learning</h3>
+									<p>Embracing new tools and methodologies to stay ahead in fast-paced, data-driven industries.</p>
 								</section>
 							</div>							
 								<!-- <section>
