--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
 								</section>
 								<section>
-									<img src="images/learning.jpg" alt="Continuous Innovation" style="width:64px; height:64px;">
+									<img src="images/learning.jpg" alt="Continuous learning" style="width:64px; height:64px;">
 									<h3>Continuous learning</h3>
 									<p>Embracing new tools and methodologies to stay ahead in fast-paced, data-driven industries.</p>
 								</section>
