--- a/index.html
+++ b/index.html
@@ -88,27 +88,44 @@
 							<h2>What I do</h2>
 							<p>Economist and Data Analyst with consulting and fintech experience. I thrive on solving complex problems and delivering impactful solutions through data analysis and clear, actionable visualizations in dynamic, results-oriented environments.</p>
 							<div class="features">
-								<section>
-									<img src="images/data-driven-insights.jpg" alt="Data Insights" style="width:64px; height:64px;">
-									<h3>Data-Driven Insights</h3>
-									<p>Transforming raw data into actionable insights that drive decision-making and business growth.</p>
+								<section style="display: flex; align-items: center; margin-bottom: 20px;">
+									<div style="width: 120px; height: 120px; border-radius: 50%; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center; margin-right: 20px;">
+										<img src="" alt="Data-driven insights" style="width: 80px; height: 80px; border-radius: 50%;">
+									</div>
+									<div>
+										<h3>Data-Driven Insights</h3>
+										<p>Delivering impactful solutions with clear and actionable data visualizations that uncover trends and opportunities.</p>
+									</div>
 								</section>
-								<section>
-									<img src="images/tailored-solutions.jpg" alt="Tailored Solutions" style="width:64px; height:64px;">
-									<h3>Tailored Solutions</h3>
-									<p>Crafting customized analytical solutions to tackle unique challenges with precision and impact.</p>
+								<section style="display: flex; align-items: center; margin-bottom: 20px;">
+									<div style="width: 120px; height: 120px; border-radius: 50%; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center; margin-right: 20px;">
+										<img src="" alt="Analytics Solutions" style="width: 80px; height: 80px; border-radius: 50%;">
+									</div>
+									<div>
+										<h3>Analytics Solutions</h3>
+										<p>Transforming raw data into comprehensive and meaningful insights to guide strategic decisions.</p>
+									</div>
 								</section>
-								<section>
-									<img src="images/visual-storytelling.jpg" alt="Visual Storytelling" style="width:64px; height:64px;">
-									<h3>Visual Storytelling</h3>
-									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
+								<section style="display: flex; align-items: center; margin-bottom: 20px;">
+									<div style="width: 120px; height: 120px; border-radius: 50%; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center; margin-right: 20px;">
+										<img src="" alt="Problem Solving" style="width: 80px; height: 80px; border-radius: 50%;">
+									</div>
+									<div>
+										<h3>Strategic Problem Solving</h3>
+										<p>Applying analytical thinking to tackle complex challenges and deliver measurable results.</p>
+									</div>
 								</section>
-								<section>
-									<img src="images/learning.jpg" alt="Continuous learning" style="width:64px; height:64px;">
-									<h3>Continuous learning</h3>
-									<p>Embracing new tools and methodologies to stay ahead in fast-paced, data-driven industries.</p>
+								<section style="display: flex; align-items: center; margin-bottom: 20px;">
+									<div style="width: 120px; height: 120px; border-radius: 50%; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center; margin-right: 20px;">
+										<img src="images/learning.jpg" alt="Continuous Learning" style="width: 80px; height: 80px; border-radius: 50%;">
+									</div>
+									<div>
+										<h3>Continuous Learning</h3>
+										<p>Staying ahead of industry trends and adapting to new technologies to ensure innovative solutions.</p>
+									</div>
 								</section>
-							</div>							
+							</div>
+							
 								<!-- <section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Urna quis bibendum</h3>
