--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<p>Crafting customized analytical solutions to tackle unique challenges with precision and impact.</p>
 								</section>
 								<section>
-									<img src="images/visual-storytelling.jpg" alt="Visual Storytelling" style="width:64px; height:64px;">
+									<img src="images/dashboard.svg" alt="Visual Storytelling" style="width:64px; height:64px;">
 									<h3>Visual Storytelling</h3>
 									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
 								</section>
@@ -104,7 +104,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Let’s connect! I’d love to hear from you—whether it’s a question, collaboration, or just a hello!</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="https://formspree.io/f/mbljegpq">
