--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 							<p>Economist and Data Analyst with consulting and fintech experience. I thrive on solving complex problems and delivering impactful solutions through data analysis and clear, actionable visualizations in dynamic, results-oriented environments.</p>
 							<div class="features">
 								<section>
-									<img src="images/data-driven-insights.jpg" alt="Data Insights" style="width:64px; height:64px;">
+									<img src="images/data-driven.svg" alt="Data Insights" style="width:64px; height:64px;">
 									<h3>Data-Driven Insights</h3>
 									<p>Transforming raw data into actionable insights that drive decision-making and business growth.</p>
 								</section>
 								<section>
-									<img src="images/tailored-solutions.jpg" alt="Tailored Solutions" style="width:64px; height:64px;">
+									<img src="images/solutions.svg" alt="Tailored Solutions" style="width:64px; height:64px;">
 									<h3>Tailored Solutions</h3>
 									<p>Crafting customized analytical solutions to tackle unique challenges with precision and impact.</p>
 								</section>
@@ -92,7 +92,7 @@
 									<p>Creating clear, engaging visualizations that turn complex data into compelling narratives.</p>
 								</section>
 								<section>
-									<img src="images/learning.jpg" alt="Continuous learning" style="width:64px; height:64px;">
+									<img src="images/learning.svg" alt="Continuous learning" style="width:64px; height:64px;">
 									<h3>Continuous learning</h3>
 									<p>Embracing new tools and methodologies to stay ahead in fast-paced, data-driven industries.</p>
 								</section>
