--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2>Proyect #2: Data Visualization</h2>
 								<p>Using shopping sales dataset to perform key visualizations</p>
 								<ul class="actions">
-									<li><a href="Proyect_2.html" class="button">Learn more</a></li>
+									<li><a href="Proyect_2.html" class="button">More</a></li>
 								</ul>
 							</div>
 						</div>
@@ -146,11 +146,11 @@
 										<li> -->
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+												<li><a href="https://www.linkedin.com/in/lautaropereirab/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/lautaropereirab" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
