--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -1,94 +1,96 @@
 <!DOCTYPE HTML>
 <!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Hyperspace by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>LPB - Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+    <head>
+        <title>LPB - Portfolio</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Portfolio - LPB</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="elements.html">Contact Me </a></li>
-					</ul>
-				</nav>
-			</header>
+        <!-- Header -->
+        <header id="header">
+            <a href="index.html" class="title">Portfolio - LPB</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="elements.html">Contact Me</a></li>
+                </ul>
+            </nav>
+        </header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+        <!-- Wrapper -->
+        <div id="wrapper">
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">Web scrapper</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>El Proyecto #1 es una herramienta de web-scraping diseñada para recolectar datos de productos del supermercado DIA. Esta aplicación automatizada crea una base de datos de productos que puede utilizarse para análisis de precios y estudios de variación de precios a lo largo del tiempo.</p>
-							<p>
-								<strong>Características Principales:</strong><br>
-								- Relevamiento exhaustivo: Captura todos los productos disponibles en el catálogo en línea del supermercado DIA.<br>
-								- Frecuencia adaptable: Al ser la primera versión, por ahora se corre únicamente de forma manual. En futuros updates se podrá correr de forma diaria. El código está adaptado para la página del DIA. En un futuro se podría replicar a otros sitios web.
-							</p>
-							<p>
-								<strong>Instalación:</strong><br>
-								La instalación es sencilla y solo requiere clonar este repositorio:<br>
-								<pre><code>git clone https://github.com/tu-usuario/tu-repositorio.git
-cd tu-repositorio</code></pre>
-							</p>
-							<p>
-								<strong>Librerías Utilizadas:</strong><br>
-								Este proyecto utiliza las siguientes librerías:<br>
-								- requests: Para hacer solicitudes HTTP a la página web del supermercado.<br>
-								- BeautifulSoup: Para parsear y extraer información de las páginas HTML.<br>
-								- pandas: Para manipular y almacenar los datos recolectados.<br>
-								- numpy: Para operaciones numéricas y de matriz.
-							</p>
-							<p>
-								<strong>Análisis de Datos:</strong><br>
-								Utiliza los datos recolectados para análisis de precios y estudios de variación de precios. Ejemplos de uso incluyen:<br>
-								- Análisis exploratorio de datos (EDA).<br>
-								- Estimación del índice de precios al consumidor (IPC).
-							</p>
-							<p>
-								<strong>Autor:</strong><br>
-								Este proyecto fue creado y mantenido por <a href="https://github.com/lautaropereirab" target="_blank">Lautaro Pereira Basile</a>. Si tienes alguna pregunta o sugerencia, no dudes en contactarme.
-							</p>
-							<p>
-								<strong>Contacto:</strong><br>
-								Puedes contactarme a través de mi perfil de <a href="https://www.linkedin.com/in/lautaropereirab/" target="_blank">LinkedIn</a> o por correo electrónico: <a href="mailto:lautaropereirabasile@gmail.com">lautaropereirabasile@gmail.com</a>.
-							</p>
-						</div>
-					</section>
+            <!-- Main -->
+            <section id="main" class="wrapper">
+                <div class="inner">
+                    <h1 class="major">Price Variation Web Scraping</h1>
+                    <!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
+                    <p>A powerful web scraping tool designed to collect and analyze supermarket product data from DIA.</p>
+                    <p>
+                        <strong>Key Features:</strong><br>
+                        - **Price Variation Analysis**: Track price changes over time to uncover market trends and pricing strategies.<br>
+                        - **Data Visualization**: Create interactive graphs and dashboards to explore pricing, discounts, and best-selling categories.<br>
+                        - **Price Comparison**: Compare prices across supermarkets to find the best deals.<br>
+                        - **Inventory & Assortment Optimization**: Identify products with frequent price fluctuations for smarter inventory and marketing strategies.<br>
+                        - **Impact of Discount Campaigns**: Analyze how promotions affect product prices and demand.
+                    </p>
+                    <p>
+                        <strong>Use Cases:</strong><br>
+                        - Inflation and economic trend monitoring.<br>
+                        - Price alerts and anomaly detection.<br>
+                        - Consumer behavior research and predictive modeling.<br>
+                        - Benchmarking for suppliers and smart shopping apps.
+                    </p>
+                    <p>
+                        <strong>Technologies Used:</strong><br>
+                        - Selenium, Requests, BeautifulSoup, Pandas, NumPy.
+                    </p>
+                    <p>
+                        <a href="https://github.com/lautaropereirab/scrapper_dia.git">See more about this project</a>
+                    </p>
 
-			</div>
+                    <button class="icon brands fa-linkedin-in">
+                        <span class="label">LinkedIn</span>
+                    </button>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+                    <p>
+                        <strong>Author:</strong><br>
+                        This project was created and is maintained by <a href="https://github.com/lautaropereirab" target="_blank">Lautaro Pereira Basile</a>. If you have any questions or suggestions, feel free to contact me.
+                    </p>
+                    <p>
+                        <strong>Contact:</strong><br>
+                        You can reach me through my <a href="https://www.linkedin.com/in/lautaropereirab/" target="_blank">LinkedIn</a> profile or by email: <a href="mailto:lautaropereirabasile@gmail.com">lautaropereirabasile@gmail.com</a>.
+                    </p>
+                </div>
+            </section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+        </div>
 
-	</body>
+        <!-- Footer -->
+        <footer id="footer" class="wrapper alt">
+            <div class="inner">
+                <ul class="menu">
+                    <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </div>
+        </footer>
+
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+
+    </body>
 </html>
