--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -36,11 +36,11 @@
                     <p>A powerful web scraping tool designed to collect and analyze supermarket product data from DIA.</p>
                     <p>
                         <strong>Key Features:</strong><br>
-                        - **Price Variation Analysis**: Track price changes over time to uncover market trends and pricing strategies.<br>
-                        - **Data Visualization**: Create interactive graphs and dashboards to explore pricing, discounts, and best-selling categories.<br>
-                        - **Price Comparison**: Compare prices across supermarkets to find the best deals.<br>
-                        - **Inventory & Assortment Optimization**: Identify products with frequent price fluctuations for smarter inventory and marketing strategies.<br>
-                        - **Impact of Discount Campaigns**: Analyze how promotions affect product prices and demand.
+                        - Price Variation Analysis: Track price changes over time to uncover market trends and pricing strategies.<br>
+                        - Data Visualization: Create interactive graphs and dashboards to explore pricing, discounts, and best-selling categories.<br>
+                        - Price Comparison: Compare prices across supermarkets to find the best deals.<br>
+                        - Inventory & Assortment Optimization: Identify products with frequent price fluctuations for smarter inventory and marketing strategies.<br>
+                        - Impact of Discount Campaigns: Analyze how promotions affect product prices and demand.
                     </p>
                     <p>
                         <strong>Use Cases:</strong><br>
@@ -53,22 +53,12 @@
                         <strong>Technologies Used:</strong><br>
                         - Selenium, Requests, BeautifulSoup, Pandas, NumPy.
                     </p>
-                    <p>
-                        <a href="https://github.com/lautaropereirab/scrapper_dia.git">See more about this project</a>
-                    </p>
-
-                    <button class="icon brands fa-linkedin-in">
-                        <span class="label">LinkedIn</span>
-                    </button>
-
-                    <p>
-                        <strong>Author:</strong><br>
-                        This project was created and is maintained by <a href="https://github.com/lautaropereirab" target="_blank">Lautaro Pereira Basile</a>. If you have any questions or suggestions, feel free to contact me.
-                    </p>
-                    <p>
-                        <strong>Contact:</strong><br>
-                        You can reach me through my <a href="https://www.linkedin.com/in/lautaropereirab/" target="_blank">LinkedIn</a> profile or by email: <a href="mailto:lautaropereirabasile@gmail.com">lautaropereirabasile@gmail.com</a>.
-                    </p>
+					<p>
+						<a href="https://github.com/lautaropereirab/scrapper_dia.git">See more about this project</a> 
+						<button class="icon brands fa-linkedin-in">
+							<span class="label">LinkedIn</span>
+						</button>
+					</p>					
                 </div>
             </section>
 
