--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -54,10 +54,7 @@
                         - Selenium, Requests, BeautifulSoup, Pandas, NumPy.
                     </p>
 					<p>
-						<a href="https://github.com/lautaropereirab/scrapper_dia.git">See more about this project</a> 
-						<button class="icon brands fa-linkedin-in">
-							<span class="label">LinkedIn</span>
-						</button>
+						<a href="https://github.com/lautaropereirab/scrapper_dia.git">See more about this project on Github</a> 
 					</p>					
                 </div>
             </section>
@@ -68,7 +65,7 @@
         <footer id="footer" class="wrapper alt">
             <div class="inner">
                 <ul class="menu">
-                    <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>&copy; Pincopan. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                 </ul>
             </div>
         </footer>
