--- a/contact_me.html
+++ b/contact_me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>LPB - Portfolio</title>
+        <title>LPB - Contact Me</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -15,6 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="contact_me.html">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -23,10 +24,11 @@
         <div id="wrapper">
 
             <!-- Main -->
-            <section id="three" class="wrapper style1 fade-up">
+            <section id="main" class="wrapper">
                 <div class="inner">
-                    <h2>Get in touch</h2>
+                    <h1 class="major">Get in touch</h1>
                     <p>Let’s connect! I’d love to hear from you—whether it’s a question, collaboration, or just a hello!</p>
+                    
                     <div class="split style1">
                         <section>
                             <form method="post" action="https://formspree.io/f/mbljegpq">
@@ -37,7 +39,7 @@
                                     </div>
                                     <div class="field half">
                                         <label for="email">Email</label>
-                                        <input type="text" name="email" id="email" required/>
+                                        <input type="email" name="email" id="email" required />
                                     </div>
                                     <div class="field">
                                         <label for="message">Message</label>
