--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -32,7 +32,7 @@
             <section id="main" class="wrapper">
                 <div class="inner">
                     <h1 class="major">Price Variation Web Scraping</h1>
-                    <!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
+                    <span class="image fit"><img src="images/web_scrapping.jpeg" alt="" /></span>
                     <p>A powerful web scraping tool designed to collect and analyze supermarket product data from DIA.</p>
                     <p>
                         <strong>Key Features:</strong><br>
