--- a/Proyect_1.html
+++ b/Proyect_1.html
@@ -33,7 +33,7 @@
                 <div class="inner">
                     <h1 class="major">Price Variation Web Scraping</h1>
                     <span class="image fit"><img src="images/web_scrapping.jpeg" alt="" /></span>
-                    <p>A powerful web scraping tool designed to collect and analyze supermarket product data from DIA.</p>
+                    <p>A powerful web scraping tool designed to collect and analyze supermarket product data from <a href="https://diaonline.supermercadosdia.com.ar/">DIA</a> .</p>
                     <p>
                         <strong>Key Features:</strong><br>
                         - Price Variation Analysis: Track price changes over time to uncover market trends and pricing strategies.<br>
