--- a/index.html
+++ b/index.html
@@ -69,7 +69,19 @@
 						</div>
 					</section>
 				</section>
-
+					<section>
+						<a href="#" class="image"><img src="images/pic02.svg" alt="" data-position="top center" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Proyect #3: Dashboards</h2>
+								<p>Fintech Credit Area KPI Dashboard</p>
+								<ul class="actions">
+									<li><a href="Proyect_3.html" class="button">More</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+				</section>
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
